<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.point2points.fishregister.Profile.activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@color/color_primary"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- Left Side -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- Layout 1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingTop="75dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="efefefffvfvfvef"
                            android:textColor="@color/color_primary"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="efefefef"
                            android:textColor="@color/color_primary"
                            android:textSize="@dimen/normal_text_size" />
                    </LinearLayout>


                    <!-- Layout 2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="FEisher"
                            android:textColor="@color/color_primary"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/worked"
                            android:textColor="@color/color_primary"
                            android:textSize="@dimen/normal_text_size" />
                    </LinearLayout>

                    <!-- QR Code -->
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp" />
                </LinearLayout>

                <!-- Right Side -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingTop="16dp">

                        <!-- Text Name -->
                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/large_text_size" />

                        <TextView
                            android:id="@+id/txtDescript"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <!-- Image and Text -->
                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/sex"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/txtGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text=""
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/dob"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/txtDOB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text=""
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/passport"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/txtPassport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text=""
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/starting_date"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/txtStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text=""
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/expring_date"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/txtExpire"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text=""
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp" />

                        <TextView
                            android:id="@+id/txtLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:textColor="@color/color_primary_text"
                            android:textSize="@dimen/large_text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|left|end" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_profile"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_performance"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
